<resources>
    <string name="app_name">SA User App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_users">USERS</string>
    <string name="menu_pending_approval">PENDING APPROVAL</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_reports">REPORTS</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid NIC</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nic">NIC</string>
    <string name="preference_file_key">Smart Attendance Admin Pref</string>
    <string name="username">Username</string>
    <string name="ok">OK</string>
    <string name="wait">Please wait....</string>
    <string name="search_input_text_hint">Search User</string>
    <string name="no_internet">No Internet</string>
    <string name="action_approve">Approve</string>
    <string name="action_reject">Reject</string>
    <string name="fingerprint_login">FINGERPRINT LOGIN</string>
       <string name="device_id">Device ID</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="invalid_confirm_password">Password Not Matching</string>
    <string name="menu_about">About</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">CANCEL</string>
    <string name="empoyee_id">Company ID</string>
    <string name="employee_dialog_title">Enter Employee ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="dob">Date of Birth</string>
    <string name="employee_id">Employee ID</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_nic">Enter NIC</string>
    <string name="enter_employee_id">Enter Employee ID</string>
    <string name="enter_dob">Select Date Of Birth</string>
    <string name="select_gender">Select Gender</string>
    <string name="enter_contact">Invalid Contact Number</string>
    <string name="enter_email">Invalid Email</string>
    <string name="enter_user_name">Enter Username</string>
    <string name="register">Register</string>
    <string name="user_registration">User Registration</string>
    <string name="gender">Gender</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="time_format">hh:mm:ss a</string>
    <string name="password">Password</string>
    <string name="confirm_passoword">Confirm Password</string>
    <string name="menu_home">HOME</string>
    <string name="scan">SCAN</string>
    <string name="generate">GENERATE</string>
    <string name="no_permission_to_camera">Camera access restricted or denied. Can configure it from settings.</string>
    <string name="scan_qr">SCAN QR</string>
    <string name="sign_successfully">Attendance Marked Successfully</string>
    <string name="employee">Employee</string>
    <string name="business_user">Office User</string>
    <string name="menu_profile">PROFILE</string>
    <string name="user_detais">User Details</string>
    <string name="action_logout">Logout</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="attendance_qr">Attendance QR</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="confirm_logout_message">Do you want to sign out?</string>
    <string name="search">Search</string>
    <string name="search_company">Search Company</string>

    //Dialog Messages
    <string name="markin">Mark In</string>
    <string name="markout">Mark Out</string>
    <string name="total_count">Total Count</string>
    <string name="invalid_company_id">Invalid Company ID</string>
    <string name="confirm_registration">Are you sure you want to create an account?</string>
    <string name="change_password">Change Password</string>
    <string name="no_permission_to_use">You are not an Android User. Please contact Admin</string>
    <string name="bio_metric_disabled">Finger Print Authentication Disabled. Enable finger print authentication from Settings</string>
    <string name="attendancealreadymarked">Already Attendance Marked</string>
    <string name="decrypt_error">Decryption Error. Please try again</string>
    <string name="no_signature_found">No Signature Found</string>
</resources>