<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_users"
        android:name="lnbti.charithgtp01.smartattendanceuserapp.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" >
    </fragment>
    <fragment
        android:id="@+id/nav_home"
        android:name="lnbti.charithgtp01.smartattendanceuserapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_users" >
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="lnbti.charithgtp01.smartattendanceuserapp.ui.profile.ProfileFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_profile" >
    </fragment>
</navigation>